--- a/css/site.css
+++ b/css/site.css
@@ -23,7 +23,7 @@ html {
   border-radius: 10px; }
 
 .cover-bg {
-  background-color: #4A89DC;
+  background-color: #2e55ff;
   border-radius: 10px 10px 0 0; }
 
 .avatar {
