--- a/css/main.css
+++ b/css/main.css
@@ -39,22 +39,22 @@
   z-index: 1; }
 
 .timeline-card-primary {
-  border-left-color: #2e55ff; }
+  border-left-color: #2845c5; }
 
 .timeline-card-primary:before {
-  border-color: #2e55ff; }
+  border-color: #2845c5; }
 
 .timeline-card-primary:after {
-  background-color: #2e55ff; }
+  background-color: #2845c5; }
 
 .timeline-card-success {
-  border-left-color: #2e55ff; }
+  border-left-color: #2845c5; }
 
 .timeline-card-success:before {
-  border-color: #2e55ff; }
+  border-color: #2845c5; }
 
 .timeline-card-success:after {
-  background-color: #2e55ff; }
+  background-color: #2845c5; }
 
 html {
   scroll-behavior: smooth; }
@@ -81,7 +81,7 @@ html {
   border-radius: 10px; }
 
 .cover-bg {
-  background-color: #2e55ff;
+  background-color: #2845c5;
   border-radius: 10px 10px 0 0; }
 
 .avatar {
