--- a/css/main.css
+++ b/css/main.css
@@ -82,7 +82,7 @@ html {
 
 .cover-bg {
   background-color: #2845c5;
-  border-radius: 10px 10px 0 0; }
+  border-radius: 10px 10px 0 0;}
 
 .avatar {
   max-width: 216px;
@@ -97,6 +97,15 @@ footer a:not(.nav-link) {
   border-bottom: 1px dashed;
   text-decoration: none;
   cursor: pointer; }
+
+.button {
+  color:#ffffff;
+  padding: 10px 30px;
+  border-radius: 50px;
+  border: none;
+  background-color: #2845c5;
+  cursor: pointer;
+}
 
 @media (min-width: 48em) {
   .site-title {
